fsl (4.1.4-3) unstable; urgency=low

  * No longer compile with '-ansi -pedantic', since a significant part of the
    sources is actually not ANSI compliant (Closes: #546003).
  * Don't use roundl() to round doubles in src/basisfield/splinefield.cpp to
    prevent FTFBS on ARMEL (Closes: #513272).
  * Bumped Standard version to 3.8.3.0 -- no changes necessary.

 -- Michael Hanke <michael.hanke@gmail.com>  Fri, 11 Sep 2009 15:53:53 -0400

fsl (4.1.4-2) unstable; urgency=low

  * Include a number of upstream patches that went into 4.1.4 after the
    4.1.4-1 package got uploaded.

 -- Michael Hanke <michael.hanke@gmail.com>  Wed, 03 Jun 2009 13:16:47 +0200

fsl (4.1.4-1) unstable; urgency=low

  * New upstream release.
  * Fixed bashisms (Closes: #530084).

 -- Michael Hanke <michael.hanke@gmail.com>  Sat, 23 May 2009 11:47:34 +0200

fsl (4.1.3-1) unstable; urgency=low

  * New Upstream Version.
  * Reverse the order of the octave*-headers build-dependency alternatives
    to account for the removal of octave2.1-headers from unstable
    (Closes: #523826).
  * Do not build-depend on FSLView anymore. That setup was way to complex and
    error-prone.
  * Bumped Standard version to 3.8.1 -- no changes necessary.

 -- Michael Hanke <michael.hanke@gmail.com>  Mon, 27 Apr 2009 22:13:12 +0200

fsl (4.1.2-2) unstable; urgency=low

  * Use internals libs compiled by the fslview package, instead of building
    them again from fsl sources.
  * Added 'XS-DM-Upload-Allowed: yes' in debian/control.
  * Install fslio im* scripts.

 -- Michael Hanke <michael.hanke@gmail.com>  Sat, 07 Feb 2009 10:33:03 +0100

fsl (4.1.2-1) unstable; urgency=low

  * New Upstream Version.
  * Added POSSUM installation directory to environment setup -- it refused to
    work otherwise.

 -- Michael Hanke <michael.hanke@gmail.com>  Fri, 05 Dec 2008 10:23:08 +0100

fsl (4.1.1-2) unstable; urgency=low

  * Compile and use fslio library version that comes with the FSL sources.