@@ -13,7 +13,7 @@ Package: fsl
 Architecture: any
 Depends: ${shlibs:Depends}, ${misc:Depends}, mozilla-firefox | www-browser, tcsh | c-shell, tk8.4 (>=8.4.7), tcl8.4 (>=8.4.7), fslview, bc, dc
 Recommends: fsl-doc (= ${source:Version}), fsl-atlases
-Suggests: fsl-feeds, ${octave:Depends}, dicomnifti, fsl-possum-data, fsl-first-data
+Suggests: fsl-feeds, ${octave:Depends}, dicomnifti, fsl-possum-data, fsl-first-data, gridengine-client
 Conflicts: fsl-fslview
 Description: analysis tools for FMRI, MRI and DTI brain imaging
  FSL is a comprehensive library of image analysis and statistical tools
